# local-ai-academic-assistant

./: .env.example  .gitignore  AGENTS.md  README.md
.agents/skills/ui-ux/: uiux.md
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
backend/: pyproject.toml  pytest.ini
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  documents.py  exports.py  generation.py  jobs.py
backend/app/common/: __init__.py  config.py  errors.py  logging.py  types.py
backend/app/export/: __init__.py  docx_exporter.py
backend/app/ingestion/: __init__.py  chunker.py  cleaner.py  document_processor.py  embedding_service.py  ocr_service.py  pdf_extractor.py
backend/app/llm/: __init__.py  formatter.py  generator.py  ollama_client.py  prompt_manager.py  query_classifier.py
backend/app/retrieval/: __init__.py  bm25_store.py  hybrid_retriever.py  reranker.py  vector_store.py
backend/app/storage/: __init__.py  paths.py  repositories.py  sqlite.py
backend/tests/: helpers.py
backend/tests/contract/: test_documents_contract.py  test_exports_contract.py  test_generate_contract.py  test_health_contract.py
backend/tests/integration/: test_active_documents.py  test_export_fallback_output.py  test_export_supported_output.py  test_grounded_qa.py  test_ingest_corrupted_pdf.py  test_ingest_readable_pdf.py  test_mode_outputs.py  test_no_context_fallback.py
backend/tests/unit/: test_argument_prompt.py  test_chunker.py  test_citation_mapping.py  test_config.py  test_docx_exporter.py  test_errors.py  test_generator_grounding.py  test_literature_review_prompt.py  test_ocr_service.py  test_output_modes.py  test_pdf_extractor.py  test_prompt_manager.py  test_query_classifier.py  test_sqlite.py  test_summarization_prompt.py
desktop/: package-lock.json  package.json
desktop/scripts/: dev-before-dev.ps1
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/sidecars/: README.md
desktop/src-tauri/src/: main.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: main.tsx
frontend/src/components/: AcademicWorkspace.tsx  CitationPanel.tsx  DocumentList.tsx  DocumentSidebar.tsx  EvidencePanel.tsx  ModeSelector.tsx  ModeSwitcher.tsx  (+6 more)
frontend/tests/: workspace.spec.tsx
specs/001-local-ai-academic-assistant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+14 files in other folders)
