[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-academic-assistant-backend"
version = "0.1.0"
description = "Local-first academic RAG backend for uploaded PDFs, grounded generation, citations, and DOCX export."
readme = { text = "Local-first academic RAG backend for uploaded PDFs, grounded generation, citations, and DOCX export.", content-type = "text/plain" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pdfplumber>=0.11",
    "pytesseract>=0.3",
    "langchain-text-splitters>=0.3",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2",
    "python-docx>=1.1",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-python-dateutil>=2.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = [
    "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]
plugins = []
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "pdfplumber.*",
    "pytesseract.*",
    "rank_bm25.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true
