[package]
name = "local-ai-academic-assistant-desktop"
version = "0.1.0"
description = "Tauri shell for the Local AI Academic Assistant"
authors = ["Local AI Academic Assistant"]
edition = "2021"

[lib]
name = "local_ai_academic_assistant_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
